[project]
name = "sheethappens"
version = "0.1.0"
description = "Canvas LMS to Google Sheets automation service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.1",
    "google-api-python-client>=2.190.0",
    "google-auth>=2.48.0",
    "google-auth-oauthlib>=1.2.0",
    "redis>=7.2.1",
    "qrcode[pil]>=8.2",
    "asyncpg>=0.30.0",
    "cryptography>=43.0.0",
    "itsdangerous>=2.2.0",
    "python-multipart>=0.0.9",
    "aiofiles>=25.1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
